--- a/Assessments.Web/wwwroot/css/graphs.css
+++ b/Assessments.Web/wwwroot/css/graphs.css
@@ -108,7 +108,8 @@
     padding: 0;
     text-align: left;
     margin: 0;
-    align-items: stretch
+    align-items: stretch;
+    padding-bottom: 5px;
 }
 
 
