--- a/Assessments.Web/wwwroot/css/tabs.css
+++ b/Assessments.Web/wwwroot/css/tabs.css
@@ -68,6 +68,7 @@
 ul.fourth,
 ul.second {
     border-color: lightgrey;
+    padding-left: 0;
 }
 
 .tabbed_element_container ul p {
